# OrbitalEdge

./: .dockerignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  SUMMARY.md  orbital_init.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: main.yml
bindings/python/: pyproject.toml
bindings/python/src/: binding.cpp
bindings/rust/: Cargo.toml
bindings/rust/src/: lib.rs
core/: CMakeLists.txt
core/include/: astronomy_utils.hpp  auto_calibration.hpp  display_driver.hpp  ephemeris_engine.hpp  event_predictor.hpp  logger.hpp  lunar_engine.hpp  mqtt_manager.hpp  satellite_engine.hpp  sensor_interface.hpp  visibility_ai.hpp  vsop87_coefficients.hpp
core/src/: ephemeris_engine.cpp  event_predictor.cpp  lunar_engine.cpp  satellite_engine.cpp
ros2_ws/src/orbital_edge_ros/: CMakeLists.txt  package.xml
ros2_ws/src/orbital_edge_ros/msg/: AstronomicalTelemetry.msg
ros2_ws/src/orbital_edge_ros/src/: telemetry_node.cpp
tests/: test_analytics.cpp  test_astronomy.cpp
tools/: orbital_bench.cpp  orbital_cli.cpp  orbital_ui.cpp
web/: app.js  index.html  style.css  wasm_api.cpp
